--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.5.2-next.15",
+    "@prisma/client": "^3.2.1",
+    "mongodb": "^3.5.9",
+    "mongoose": "^6.0.10",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
+    "nodemailer": "^6.7.0",
+    "prisma": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
